Move elements around and fix beta label spacing.

--- a/src/components/PrimaryNav/_primary-nav.scss
+++ b/src/components/PrimaryNav/_primary-nav.scss
@@ -114,14 +114,13 @@
         .p-label--new {
           margin-left: auto;
           margin-right: 1rem;
-          margin-top: 0.5rem;
+          height: 1.5rem;
         }
 
         .version {
           color: $color-light;
           font-size: 0.875rem;
           padding-left: 1rem;
-          padding-top: 0.5rem;
         }
       }
     }
